k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smeagol-galore
  labels:
    run: smeagol-galore
spec:
  replicas: 1
  selector:
    matchLabels:
      run: smeagol-galore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: smeagol-galore
    spec:
      containers:
      - image: schnatterer/smeagol-galore:0.1.3
        imagePullPolicy: IfNotPresent
        name: smeagol-galore
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          privileged: false
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
        resources:
        # Pretty much rolled the dice on those ones. Better monitor and adapt!
          requests:
            cpu: "500m"
            memory: "1024Mi"
          limits:
            cpu: "2000m"
            memory: "2048Mi"
        readinessProbe:
          httpGet:
            path: /cas/login
            port: 8443
            scheme: HTTPS
          # "Normal" server startup might take: about 30 Seconds
          initialDelaySeconds: 10
          periodSeconds: 1
          # First plugin installation might take a couple of minutes. Should be less than 5, though!
          failureThreshold: 300
        livenessProbe:
          httpGet:
            path: /cas/login
            port: 8443
            scheme: HTTPS
          # Make sure not to restart during first plugin install
          initialDelaySeconds: 300
          periodSeconds: 5
          failureThreshold: 5
        volumeMounts:
        # Config
        - name: users
          mountPath: "/etc/cas/users.txt"
          subPath: "users.txt"
          readOnly: true
        - name: attribs
          mountPath: "/etc/cas/attributes.xml"
          subPath: "attributes.xml"
          readOnly: true
        - name: cacerts
          mountPath: "/usr/lib/jvm/java-1.8-openjdk/jre/lib/security/cacerts"
          subPath: "cacerts"
          readOnly: true
        - name: keystore
          mountPath: "/usr/local/tomcat/conf/keystore.jks"
          subPath: "keystore.jks"
          readOnly: true
        # Persistent data
        - name: scm
          mountPath: /home/tomcat/.scm
        # Needed when using a read-only file system
        - name: tomcat-tmp
          mountPath: /usr/local/tomcat/temp
        - name: tomcat-logs
          mountPath: /usr/local/tomcat/logs
        - name: tomcat-work
          mountPath: /usr/local/tomcat/work
        - name: tmp
          mountPath: /tmp
      volumes:
      # Config
      - name: users
        secret:
          secretName: smeagol-galore
      - name: attribs
        configMap:
          name: smeagol-galore
      - name: cacerts
        secret:
          secretName: smeagol-galore
      - name: keystore
        secret:
          secretName: smeagol-galore
      # Persistent data
      - name: scm
        persistentVolumeClaim:
          claimName: smeagol-galore
      #- name: scm
      #  hostPath:
      #    path: /tmp/data
      # Needed when using a read-only file system
      - name: tomcat-tmp
        emptyDir: {}
      - name: tomcat-logs
        emptyDir: {}
      - name: tomcat-work
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      serviceAccountName: smeagol-galore
      # For now, the pod does not query the k8s API
      automountServiceAccountToken: false
