k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: smeagol-galore
  name: smeagol-galore
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    run: smeagol-galore
  type: LoadBalancer
